Post retrieval and checking flair

--- a/prompt/package.json
+++ b/prompt/package.json
@@ -9,6 +9,7 @@
   "author": "Sreeram Venkitesh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0"
   }
 }
